--- a/3 Framework/hw_backprop.ipynb
+++ b/3 Framework/hw_backprop.ipynb
@@ -98,25 +98,6 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### Собственные слои:\n",
-    "1. `LeakyReLU`\n",
-    "2. `Dropout`\n",
-    "3. BatchNorm\n",
-    "4. `CrossEntropy`\n",
-    "5. `SoftMax`\n",
-    "\n",
-    "### MNIST\n",
-    "1. `> 90%`\n",
-    "2. `> 95%`\n",
-    "3. `> 96%`\n",
-    "4. '> 97%'\n",
-    "5. '> 98%'"
-   ]
-  },
-  {
    "cell_type": "code",
    "execution_count": 732,
    "metadata": {
@@ -726,7 +707,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Также, как и в первой ДЗ картику перевожу в вектор через reshape"
+    "Также, как и в первой ДЗ картику перевожу в вектор, через reshape(-1, 784)"
    ]
   },
   {
